gcc/testsuite/rust/rustc/ui/error-codes/E0110.rs
type X = u32<'static>; // { dg-error ".E0109." "" { target *-*-* } }

fn main() {}

